# erpl_monte_carlo_sim

./: README.md  analyze_outlier.py  find_max_apogee.py  test_atmosphere_fix.py  test_fixes.py
cpp_metal/: CMakeLists.txt  build.sh  build_cpu_only.sh  build_manual.sh
cpp_metal/include/: rocket_simulation.hpp  rocket_simulation_cpp.hpp
cpp_metal/shaders/: monte_carlo.metal
cpp_metal/src/: atmosphere.cpp  main.cpp  main_cpu.cpp  metal_compute.cpp  monte_carlo.cpp  monte_carlo_cpu.cpp  motor.cpp  rocket_config.cpp  simulator.cpp  utils.cpp
outputs/monte_carlo_20250707_162628/: monte_carlo_report.json  monte_carlo_report.txt
outputs/monte_carlo_20250707_162915/: monte_carlo_report.json
outputs/monte_carlo_20250707_164048/: monte_carlo_report.json  monte_carlo_report.txt
outputs/monte_carlo_20250707_223249/: monte_carlo_report.json  monte_carlo_report.txt
outputs/monte_carlo_20250707_223447/: monte_carlo_report.json  monte_carlo_report.txt
outputs/monte_carlo_20250707_223851/: monte_carlo_report.json  monte_carlo_report.txt
outputs/monte_carlo_20250707_225353/: monte_carlo_report.json  monte_carlo_report.txt
outputs/monte_carlo_20250707_231404/: monte_carlo_report.json  monte_carlo_report.txt
outputs/monte_carlo_20250708_081955/: monte_carlo_report.json  monte_carlo_report.txt
outputs/monte_carlo_20250708_082602/: monte_carlo_report.json  monte_carlo_report.txt
outputs/monte_carlo_20250708_082805/: monte_carlo_report.json  monte_carlo_report.txt
outputs/monte_carlo_20250708_082958/: monte_carlo_report.json  (+1 more)
rocket_simulation/: __init__.py  environment.py  example.py  monte_carlo.py  motor.py  performance_test.py  rocket.py  sample_wind.csv  simulator.py  test_fix.py  utils.py
(+174 files in other folders)
